# Braian-Web-Admin-Panel

./: CMakeLists.txt  README.md  images.qrc  loginpage.cpp  loginpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  portfoliopage.cpp  portfoliopage.h  portfoliopage.ui
consts/: page_names.h
core/: configmanager.cpp  configmanager.h
custome_widgets/: portfolioproject.cpp  portfolioproject.h  portfolioproject.ui  technology.cpp  technology.h  technology.ui  technologywidget.cpp  technologywidget.h
dialogs/: createproject.h  createtechnology.cpp  createtechnology.h  createtechnology.ui
models/: feature.cpp  feature.h  portfolio.cpp  portfolio.h  project.cpp  project.h  technicalinfo.cpp  technicalinfo.h  technology.cpp  technology.h
network/: apiclient.cpp  apiclient.h
pages/login_page/: loginpage.cpp  loginpage.h
pages/portfolio_page/: portfoliopage.cpp  portfoliopage.h  portfoliopage.ui
pages/portfolio_page/custome_widgets/: portfolioproject.cpp  portfolioproject.h  portfolioproject.ui  technologiesview.cpp  technologiesview.h  technologywidget.cpp  technologywidget.h  technologywidget.ui
pages/portfolio_page/dialogs/: createproject.cpp  createproject.h  createproject.ui  createtechnology.h  technologyhandler.cpp  technologyhandler.h  technologyhandler.ui  technologyrelation.cpp  technologyrelation.h  technologyrelation.ui
pages/project_page/: projectpage.cpp  projectpage.h  projectpage.ui
pages/project_page/custome_widgets/: imagewidget.cpp  imagewidget.h  imagewidget.ui
pages/project_page/dialogs/: featureshandler.cpp  featureshandler.h  featureshandler.ui  handleimages.cpp  handleimages.h  handleimages.ui  technicalinfohandler.cpp  technicalinfohandler.h  technicalinfohandler.ui
services/: authservice.cpp  authservice.h  entityimageservice.cpp  entityimageservice.h  entitytechservice.cpp  entitytechservice.h  featureservice.cpp  featureservice.h  portfolioservice.cpp  portfolioservice.h  projectservice.cpp  projectservice.h  technicalinfoservice.cpp  technicalinfoservice.h  technologyservice.cpp  technologyservice.h
services/factory/: servicefactory.cpp  servicefactory.h
utils/: networkutils.cpp  networkutils.h  utils.cpp  utils.h
